option java_outer_classname="UnSubscribeTopicCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message UnSubscribeTopicCommand {
    optional string topicName = 1;
	optional string recepientId = 2;
	optional int64 requestId = 3;
	optional int32 pubSubType = 4;
}
